Create translation.service. Update translation in header, nacbar, footer and home

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,22 @@
 {
+  "TITLE": "Data Engineer | Business Intelligence Specialist | Software Developer",
+
+  "HOME": "Home",
+  "PORTFOLIO": "Portfolio",
+  "RESUME": "Resume",
+  "CONTACT": "Contact",
+
+  "ABOUT_ME": "About Me",
+  "ABOUT_ME_TEXT_1": "With over 10 years in the technology realm, I've honed my ability to craft efficient and scalable solutions. My focus lies in frontend development using technologies such as Angular, HTML, and CSS, alongside building robust backend solutions with Java and Spring Boot. I've also delved into implementing RESTful API services, ensuring adherence to quality standards and modularity.",
+  "ABOUT_ME_TEXT_2": "As a business intelligence specialist, I've ventured into automating processes through Web Scraping with Python and devised Data Warehouse models to provide detailed statistics for BI projects. My knack for collaborating in agile environments, like Scrum, and applying sound development principles enables me to tackle complex challenges with an efficient and quality-oriented approach.",
+  "ABOUT_ME_TEXT_3": "My work philosophy is rooted in creating technological solutions that are not only effective from a technical standpoint but also make a positive impact on decision-making and operational efficiency. I'm enthusiastic about continually exploring new technologies and contributing to the success of innovative projects.",
+  "FEATURED_PROJECT": "Featured Project",
+
   "CONTACT_ME": "Contact Me",
-  "CONTACT_DESCRIPTION": "Feel free to reach out to me for any inquiries or collaboration opportunities"
+  "CONTACT_DESCRIPTION": "Feel free to reach out to me for any inquiries or collaboration opportunities",
+
+  "FOOTER_TEXT_1": "I am committed to building solutions that not only exceed expectations but also transform possibilities into tangible realities.",
+  "FOOTER_TEXT_2": "Let's go beyond conventional limits and create the future of technology!",
+  "FOOTER_TEXT_3": "Let's drive the future together!"
+
 }
