--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,65 @@
   "FEATURED_PROJECT_SUMMARY": "This is an e-commerce project developed in Java using Spring Boot. The application implements key functionalities for managing products, orders, users, and the online purchasing process.",
   "FEATURED_PROJECT_INFO": "Visit the section to learn more!",
 
+  "DOWNLOAD_PDF_RESUME": "Download PDF Resume",
+  "WORK": "Wor Experience",
+  "IAS_JOB_1": "Software Developer",
+  "IAS_SD_OBJECTIVE_1": "Development and maintenance of backend applications using Java and Spring Boot.",
+  "IAS_SD_OBJECTIVE_2": "Strong skills in dependency injection to ensure modularity and ease of maintenance.",
+  "IAS_SD_OBJECTIVE_3": "Development and maintenance of frontend applications using HTML, CSS, and Angular.",
+  "IAS_SD_OBJECTIVE_4": "Strong skills in adhering to the Single Responsibility Principle.",
+  "IAS_SD_OBJECTIVE_5": "Implementation of REST API services to expose key functionalities, following design standards and best practices.",
+  "IAS_SD_OBJECTIVE_6": "Efficient access to databases using technologies like JDBC and JPA to ensure data integrity and management.",
+  "IAS_SD_OBJECTIVE_7": "Active collaboration in the exposure and consumption of web services, facilitating the integration of external systems and improving operational efficiency.",
+  "IAS_SD_OBJECTIVE_8": "Strong skills in object-oriented programming (OOP) and familiarity with functional and reactive programming concepts.",
+  "IAS_JOB_2": "Data Warehouse Developer",
+  "IAS_DWH_OBJECTIVE_1": "Designed and developed Data Warehouse (DWH) models.",
+  "IAS_DWH_OBJECTIVE_2": "Implemented ETL processes and created dashboards and KPIs.",
+  "IAS_DWH_OBJECTIVE_3": "Utilized Microsoft BI Suite (SQL, SSIS, SSAS, SSRS, and Power BI) for statistics and financial analysis.",
+  "IAS_DWH_OBJECTIVE_4": "Participated in Scrum projects.",
+  "AVALON_JOB": "BI Consultant",
+  "AVALON_OBJECTIVE_1": "Automated processes through Python-based Web Scraping.",
+  "AVALON_OBJECTIVE_2": "Designed and developed Data Warehouse and Tabular Cube models.",
+  "AVALON_OBJECTIVE_3": "Created ETL processes and dashboards.",
+  "AVALON_OBJECTIVE_4": "Generated BI reports in the cloud.",
+  "EMTELCO_JOB_1": "BI Engineer",
+  "EMTELCO_BI_OBJECTIVE_1": "Designed and continuously improved databases and ETL processes.",
+  "EMTELCO_BI_OBJECTIVE_2": "Researched and adopted best practices in business intelligence and data mining.",
+  "EMTELCO_BI_OBJECTIVE_3": "Automated processes using integration tools and file capture.",
+  "EMTELCO_BI_OBJECTIVE_4": "Developed reports and dashboards for business monitoring and control.",
+  "EMTELCO_JOB_2": "Programming and Control Analyst",
+  "EMTELCO_PyC_OBJECTIVE_1": "Data analysis to support operations and report generation.",
+  "EMTELCO_PyC_OBJECTIVE_2": "Agent and workforce planning and sizing.",
+  "EMTELCO_PyC_OBJECTIVE_3": "Database management and indicator development.",
+  "EMTELCO_PyC_OBJECTIVE_4": "Process automation using RPA.",
+  "EMTELCO_PyC_OBJECTIVE_5": "Report and dashboard development in Power BI and Zendesk.",
+  "ULTRACOM_JOB": "BI Engineer",
+  "ULTRACOM_OBJECTIVE_1": "Researched and adopted best practices in business intelligence and data mining.",
+  "ULTRACOM_OBJECTIVE_2": "Designed and developed Data Warehouse and Tabular Cube models.",
+  "ULTRACOM_OBJECTIVE_3": "Implemented ETL processes and created dashboards.",
+  "ULTRACOM_OBJECTIVE_4": "Generated BI reports in the cloud.",
+  "SECTOR": "Sector Experience",
+  "SECTOR_INFO_1": "Financial",
+  "SECTOR_INFO_2": "Retail",
+  "SECTOR_INFO_3": "Transport",
+  "SECTOR_INFO_4": "Telecomunications",
+  "SECTOR_INFO_5": "Tech",
+  "SECTOR_INFO_6": "Tourism",
+  "EDUCATION": "Education",
+  "UNIVERSITY_NAME": "Catholic University of the North",
+  "UNIVERSITY_TITLE_1": "Business Intelligence Specialist",
+  "UNIVERSITY_TITLE_2": "Computer Engineer",
+  "SKILLS": "Technical Skills",
+  "PROGRAMING_LANGUAGES": "Programing Languages",
+  "DATABASE": "Database",
+  "CLOUD_COMPUTING": "Cloud Computing",
+  "TESTING": "Testing",
+  "OTHER_SKILLS": "Other Skills",
+  "LANGUAGES": "Languages",
+  "PRESENT": "Present",
+  "DATE": "Date",
+
+
   "CONTACT_ME": "Contact Me",
   "CONTACT_DESCRIPTION": "Feel free to reach out to me for any inquiries or collaboration opportunities",
 
