--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,6 +14,65 @@
   "FEATURED_PROJECT_SUMMARY": "Este es un proyecto de comercio electrónico desarrollado en Java utilizando Spring Boot. La aplicación implementa funcionalidades clave para la gestión de productos, pedidos, usuarios y el proceso de compra online.",
   "FEATURED_PROJECT_INFO": "¡Visita la sección para conocer más!",
 
+  "DOWNLOAD_PDF_RESUME": "Descargar Currículum PDF",
+  "WORK": "Experiencia",
+  "IAS_JOB_1": "Desarrollador de Software",
+  "IAS_SD_OBJECTIVE_1": "Desarrollo y mantenimiento de aplicaciones backend utilizando Java y Spring Boot.",
+  "IAS_SD_OBJECTIVE_2": "Competencias sólidas en la inyección de dependencias para garantizar la modularidad y la facilidad de mantenimiento.",
+  "IAS_SD_OBJECTIVE_3": "Desarrollo y mantenimiento de aplicaciones frontend utilizando Html, CSS y Angular.",
+  "IAS_SD_OBJECTIVE_4": "Competencias sólidas en cumplir con el principio de una sola responsabilidad.",
+  "IAS_SD_OBJECTIVE_5": "Implementación de servicios API REST para la exposición de funcionalidades clave, siguiendo los estándares de diseño y buenas prácticas.",
+  "IAS_SD_OBJECTIVE_6": "Acceso eficiente a bases de datos utilizando tecnologías como JDBC y JPA para garantizar la integridad y la gestión de datos.",
+  "IAS_SD_OBJECTIVE_7": "Colaboración activa en la exposición y consumo de servicios web, facilitando la integración de sistemas externos y mejorando la eficiencia operativa.",
+  "IAS_SD_OBJECTIVE_8": "Competencias sólidas en programación orientada a objetos (POO) y familiaridad con conceptos de programación funcional y reactiva.",
+  "IAS_JOB_2": "Desarrollador Data Warehouse",
+  "IAS_DWH_OBJECTIVE_1": "Diseño y desarrollo de modelos de Bodegas de Datos (DWH).",
+  "IAS_DWH_OBJECTIVE_2": "Implementación de procesos ETL y creación de cuadros de mando (dashboards y KPIs).",
+  "IAS_DWH_OBJECTIVE_3": "Uso de Microsoft BI Suite (SQL, SSIS, SSAS, SSRS y Power BI) para estadísticas y análisis financiero.",
+  "IAS_DWH_OBJECTIVE_4": "Participación en proyectos Scrum.",
+  "AVALON_JOB": "Consultor BI",
+  "AVALON_OBJECTIVE_1": "Automatización de procesos mediante Web Scraping con Python.",
+  "AVALON_OBJECTIVE_2": "Diseño y desarrollo de modelos de Bodegas de Datos y Cubos Tabulares.",
+  "AVALON_OBJECTIVE_3": "Creación de procesos ETL y cuadros de mando.",
+  "AVALON_OBJECTIVE_4": "Generación de informes de BI en la nube.",
+  "EMTELCO_JOB_1": "Ingeniero BI",
+  "EMTELCO_BI_OBJECTIVE_1": "Diseño y mejora continua de bases de datos y procesos ETL.",
+  "EMTELCO_BI_OBJECTIVE_2": "Investigación y adopción de mejores prácticas en inteligencia de negocios y minería de datos.",
+  "EMTELCO_BI_OBJECTIVE_3": "Automatización de procesos mediante herramientas de integración y captura de archivos.",
+  "EMTELCO_BI_OBJECTIVE_4": "Desarrollo de informes y dashboards para seguimiento y control del negocio.",
+  "EMTELCO_JOB_2": "Analista de Programación y Control",
+  "EMTELCO_PyC_OBJECTIVE_1": "Análisis de datos para soporte operativo y elaboración de informes y dashboards.",
+  "EMTELCO_PyC_OBJECTIVE_2": "Planificación y dimensionamiento de agentes y puestos de trabajo.",
+  "EMTELCO_PyC_OBJECTIVE_3": "Gestión de bases de datos y elaboración de indicadores.",
+  "EMTELCO_PyC_OBJECTIVE_4": "Automatización de procesos mediante RPA.",
+  "EMTELCO_PyC_OBJECTIVE_5": "Desarrollo de informes y dashboards en Power BI y Zendesk.",
+  "ULTRACOM_JOB": "Ingeniero BI",
+  "ULTRACOM_OBJECTIVE_1": "Investigación y adopción de mejores prácticas en inteligencia de negocios y minería de datos.",
+  "ULTRACOM_OBJECTIVE_2": "Diseño y desarrollo de modelos de Bodegas de Datos y Cubos Tabulares.",
+  "ULTRACOM_OBJECTIVE_3": "Implementación de procesos ETL y creación de cuadros de mando.",
+  "ULTRACOM_OBJECTIVE_4": "Generación de informes de BI en la nube.",
+  "SECTOR": "Sectores de Experiencia",
+  "SECTOR_INFO_1": "Financiero",
+  "SECTOR_INFO_2": "Ventas",
+  "SECTOR_INFO_3": "Transporte",
+  "SECTOR_INFO_4": "Telecomunicaiones",
+  "SECTOR_INFO_5": "Tecnológico",
+  "SECTOR_INFO_6": "Turismo",
+  "EDUCATION": "Educación",
+  "UNIVERSITY_NAME": "Universidad Católica del Norte",
+  "UNIVERSITY_TITLE_1": "Especialista en Inteligencia de Negocios",
+  "UNIVERSITY_TITLE_2": "Ingeniero Informático",
+  "SKILLS": "Habilidades Técnicas",
+  "PROGRAMING_LANGUAGES": "Lenguajes de Programación",
+  "DATABASE": "Bases de Datos",
+  "CLOUD_COMPUTING": "Computación en la Nube",
+  "TESTING": "Pruebas",
+  "OTHER_SKILLS": "Otras Habilidades",
+  "LANGUAGES": "Idiomas",
+  "PRESENT": "Actual",
+  "DATE": "Periodo",
+
+
   "CONTACT_ME": "Contáctame",
   "CONTACT_DESCRIPTION": "No dudes en contactarme para cualquier consulta u oportunidad de colaboración",
 
