--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,13 +7,12 @@
   "CONTACT": "Contact",
 
   "ABOUT_ME": "About Me",
-  "ABOUT_ME_TEXT_1": "With over {{years}} years in the technology realm, I've honed my ability to craft efficient and scalable solutions. My focus lies in frontend development using technologies such as Angular, HTML, and CSS, alongside building robust backend solutions with Java and Spring Boot. I've also delved into implementing RESTful API services, ensuring adherence to quality standards and modularity.",
-  "ABOUT_ME_TEXT_2": "As a business intelligence specialist, I've ventured into automating processes through Web Scraping with Python and devised Data Warehouse models to provide detailed statistics for BI projects. My knack for collaborating in agile environments, like Scrum, and applying sound development principles enables me to tackle complex challenges with an efficient and quality-oriented approach.",
-  "ABOUT_ME_TEXT_3": "My work philosophy is rooted in creating technological solutions that are not only effective from a technical standpoint but also make a positive impact on decision-making and operational efficiency. I'm enthusiastic about continually exploring new technologies and contributing to the success of innovative projects.",
+  "ABOUT_ME_TEXT_1": "With over {{years}} years in the technology industry, I have honed my ability to create efficient and scalable solutions. My focus extends to the development of both frontend applications using technologies like Angular, HTML, and CSS, and robust backend solutions using Java and Spring Boot. My experience also includes the implementation of REST API services, ensuring quality standards and modularity.",
+  "ABOUT_ME_TEXT_2": "As a Business Intelligence specialist, I have delved into process automation through Web Scraping with Python and designed Data Warehouse models to provide detailed statistics in BI projects. My ability to collaborate in agile environments, such as Scrum, and apply solid development principles enables me to tackle complex challenges with an efficient and quality-focused approach.",
+  "ABOUT_ME_TEXT_3": "My work philosophy is grounded in creating technological solutions that are not only effective from a technical standpoint but also have a positive impact on decision-making and operational efficiency. I am eager to continue exploring new technologies and contribute to the success of innovative projects.",
   "FEATURED_PROJECT": "Featured Project",
   "FEATURED_PROJECT_SUMMARY": "This is an e-commerce project developed in Java using Spring Boot. The application implements key functionalities for managing products, orders, users, and the online purchasing process.",
   "FEATURED_PROJECT_INFO": "Visit the section to learn more!",
-
   "DOWNLOAD_PDF_RESUME": "Download PDF Resume",
   "WORK": "Wor Experience",
   "IAS_JOB_1": "Software Developer",
@@ -30,7 +29,7 @@
   "IAS_DWH_OBJECTIVE_2": "Implemented ETL processes and created dashboards and KPIs.",
   "IAS_DWH_OBJECTIVE_3": "Utilized Microsoft BI Suite (SQL, SSIS, SSAS, SSRS, and Power BI) for statistics and financial analysis.",
   "IAS_DWH_OBJECTIVE_4": "Participated in Scrum projects.",
-  "AVALON_JOB": "BI Consultant",
+  "AVALON_JOB": "Developer Analyst",
   "AVALON_OBJECTIVE_1": "Automated processes through Python-based Web Scraping.",
   "AVALON_OBJECTIVE_2": "Designed and developed Data Warehouse and Tabular Cube models.",
   "AVALON_OBJECTIVE_3": "Created ETL processes and dashboards.",
@@ -51,27 +50,52 @@
   "ULTRACOM_OBJECTIVE_2": "Designed and developed Data Warehouse and Tabular Cube models.",
   "ULTRACOM_OBJECTIVE_3": "Implemented ETL processes and created dashboards.",
   "ULTRACOM_OBJECTIVE_4": "Generated BI reports in the cloud.",
-  "SECTOR": "Sector Experience",
+  "SECTOR": "Work Experience Sectors",
   "SECTOR_INFO_1": "Financial",
-  "SECTOR_INFO_2": "Retail",
-  "SECTOR_INFO_3": "Transport",
-  "SECTOR_INFO_4": "Telecomunications",
-  "SECTOR_INFO_5": "Tech",
+  "SECTOR_INFO_2": "Sales",
+  "SECTOR_INFO_3": "Transportation",
+  "SECTOR_INFO_4": "Telecommunications",
+  "SECTOR_INFO_5": "Technology",
   "SECTOR_INFO_6": "Tourism",
   "EDUCATION": "Education",
   "UNIVERSITY_NAME": "Catholic University of the North",
   "UNIVERSITY_TITLE_1": "Business Intelligence Specialist",
-  "UNIVERSITY_TITLE_2": "Computer Engineer",
-  "SKILLS": "Technical Skills",
+  "UNIVERSITY_TITLE_2": "Bachelor's Degree in Computer Engineer",
+  "SKILLS_DE": "Technical Skills as a Data Engineer",
+  "DATA_EXTRACTION_TOOLS": "Data Extraction",
+  "DATA_TRANSFORMATION_TOOLS": "Data Transformation",
+  "DATA_LOADING_TOOLS": "Data Loading",
+  "DATA_ANALYSIS_TOOLS": "Data Analysis",
+  "DATA_VISUALIZATION_TOOLS": "Data Visualization",
+  "DATA_REPORTING_TOOLS": "Data Reporting",
+  "WEB_PAGES": "Web pages",
+  "FILES": "Files",
+  "DATABASES": "Databases",
+  "DATA_WAREHOUSE": "Data Warehouse",
+  "DATA_LAKE": "Data Lake",
+  "SQL_NOSQL": "SQL/NoSQL Database",
+  "BI_TOOLS": "BI Tools",
+  "OLAP": "OLAP Cubes",
+  "AGILE": "Agile Methodologies",
+  "SKILLS_SD": "Technical Skills as a Software Developer",
+  "CLEAN_ARCHITECTURE": "Clean Architecture",
+  "CLEAN_CODE": "Clean Code",
+  "DOM": "DOM y Browser Engine",
   "PROGRAMING_LANGUAGES": "Programing Languages",
   "DATABASE": "Database",
   "CLOUD_COMPUTING": "Cloud Computing",
   "TESTING": "Testing",
+  "UNIT_TEST": "Unit Test",
+  "INTEGRATION_TEST": "Integration Test",
+  "PERFORMANCE_TEST": "Performance Test",
   "OTHER_SKILLS": "Other Skills",
   "LANGUAGES": "Languages",
+  "SPANISH": "Spanish",
+  "ENGLISH": "English",
+  "SPANISH_PROFICIENCY": "Native speaker",
+  "ENGLISH_PROFICIENCY": "Intermediate speaker (A2/B1)",
   "PRESENT": "Present",
   "DATE": "Date",
-
 
   "CONTACT_ME": "Contact Me",
   "CONTACT_DESCRIPTION": "Feel free to reach out to me for any inquiries or collaboration opportunities",
