--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,8 +14,8 @@
   "FEATURED_PROJECT_SUMMARY": "Este es un proyecto de comercio electrónico desarrollado en Java utilizando Spring Boot. La aplicación implementa funcionalidades clave para la gestión de productos, pedidos, usuarios y el proceso de compra online.",
   "FEATURED_PROJECT_INFO": "¡Visita la sección para conocer más!",
 
-  "DOWNLOAD_PDF_RESUME": "Descargar Currículum PDF",
-  "WORK": "Experiencia",
+  "DOWNLOAD_PDF_RESUME": "Descargar Currículum en PDF",
+  "WORK": "Experiencia Laboral",
   "IAS_JOB_1": "Desarrollador de Software",
   "IAS_SD_OBJECTIVE_1": "Desarrollo y mantenimiento de aplicaciones backend utilizando Java y Spring Boot.",
   "IAS_SD_OBJECTIVE_2": "Competencias sólidas en la inyección de dependencias para garantizar la modularidad y la facilidad de mantenimiento.",
@@ -30,7 +30,7 @@
   "IAS_DWH_OBJECTIVE_2": "Implementación de procesos ETL y creación de cuadros de mando (dashboards y KPIs).",
   "IAS_DWH_OBJECTIVE_3": "Uso de Microsoft BI Suite (SQL, SSIS, SSAS, SSRS y Power BI) para estadísticas y análisis financiero.",
   "IAS_DWH_OBJECTIVE_4": "Participación en proyectos Scrum.",
-  "AVALON_JOB": "Consultor BI",
+  "AVALON_JOB": "Analista Programador",
   "AVALON_OBJECTIVE_1": "Automatización de procesos mediante Web Scraping con Python.",
   "AVALON_OBJECTIVE_2": "Diseño y desarrollo de modelos de Bodegas de Datos y Cubos Tabulares.",
   "AVALON_OBJECTIVE_3": "Creación de procesos ETL y cuadros de mando.",
@@ -51,7 +51,7 @@
   "ULTRACOM_OBJECTIVE_2": "Diseño y desarrollo de modelos de Bodegas de Datos y Cubos Tabulares.",
   "ULTRACOM_OBJECTIVE_3": "Implementación de procesos ETL y creación de cuadros de mando.",
   "ULTRACOM_OBJECTIVE_4": "Generación de informes de BI en la nube.",
-  "SECTOR": "Sectores de Experiencia",
+  "SECTOR": "Sectores de Experiencia Laboral",
   "SECTOR_INFO_1": "Financiero",
   "SECTOR_INFO_2": "Ventas",
   "SECTOR_INFO_3": "Transporte",
@@ -62,16 +62,41 @@
   "UNIVERSITY_NAME": "Universidad Católica del Norte",
   "UNIVERSITY_TITLE_1": "Especialista en Inteligencia de Negocios",
   "UNIVERSITY_TITLE_2": "Ingeniero Informático",
-  "SKILLS": "Habilidades Técnicas",
+  "SKILLS_DE": "Habilidades Técnicas como Ingeniero de Datos",
+  "DATA_EXTRACTION_TOOLS": "Extracción de Datos",
+  "DATA_TRANSFORMATION_TOOLS": "Transformación de Datos",
+  "DATA_LOADING_TOOLS": "Carga de Datos",
+  "DATA_ANALYSIS_TOOLS": "Análisis de Datos",
+  "DATA_VISUALIZATION_TOOLS": "Visualización de Datos",
+  "DATA_REPORTING_TOOLS": "Reportería de Datos",
+  "WEB_PAGES": "Páginas Web",
+  "FILES": "Archivos",
+  "DATABASES": "Bases de Datos",
+  "DATA_WAREHOUSE": "Bodega de Datos",
+  "DATA_LAKE": "Lagos de Datos",
+  "SQL_NOSQL": "Bases de Datos SQL/NoSQL",
+  "BI_TOOLS": "Herramientas de BI",
+  "OLAP": "Cubos OLAP",
+  "AGILE": "Metodologías Ágiles",
+  "SKILLS_SD": "Habilidades Técnicas como Desarrollador de software",
+  "CLEAN_ARCHITECTURE": "Arquitecturas Limpias",
+  "CLEAN_CODE": "Código Limpio",
+  "DOM": "DOM y Motor del Navegador",
   "PROGRAMING_LANGUAGES": "Lenguajes de Programación",
   "DATABASE": "Bases de Datos",
   "CLOUD_COMPUTING": "Computación en la Nube",
   "TESTING": "Pruebas",
+  "INTEGRATION_TEST": "Pruebas de Integración",
+  "UNIT_TEST": "Pruebas Unitarias",
+  "PERFORMANCE_TEST": "Pruebas de Performance",
   "OTHER_SKILLS": "Otras Habilidades",
   "LANGUAGES": "Idiomas",
+  "SPANISH": "Español",
+  "ENGLISH": "Inglés",
+  "SPANISH_PROFICIENCY": "Hablante Nativo",
+  "ENGLISH_PROFICIENCY": "Hablante Intermedio (A2/B1)",
   "PRESENT": "Actual",
   "DATE": "Periodo",
-
 
   "CONTACT_ME": "Contáctame",
   "CONTACT_DESCRIPTION": "No dudes en contactarme para cualquier consulta u oportunidad de colaboración",
