Add resume Data Engineer

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,8 @@
   "FEATURED_PROJECT": "Featured Project",
   "FEATURED_PROJECT_SUMMARY": "This is an e-commerce project developed in Java using Spring Boot. The application implements key functionalities for managing products, orders, users, and the online purchasing process.",
   "FEATURED_PROJECT_INFO": "Visit the section to learn more!",
-  "DOWNLOAD_PDF_RESUME": "Download PDF Resume",
+  "DOWNLOAD_PDF_RESUME_DEV": "Download PDF resume of Software Developer",
+  "DOWNLOAD_PDF_RESUME_DATA": "Download PDF resume of Data Engineer",
   "WORK": "Wor Experience",
   "IAS_JOB_1": "Software Developer",
   "IAS_SD_OBJECTIVE_1": "Development and maintenance of backend applications using Java and Spring Boot.",
@@ -61,7 +62,7 @@
   "UNIVERSITY_NAME": "Catholic University of the North",
   "UNIVERSITY_TITLE_1": "Business Intelligence Specialist",
   "UNIVERSITY_TITLE_2": "Bachelor's Degree in Computer Engineer",
-  "SKILLS_DE": "Technical Skills as a Data Engineer",
+  "SKILLS_DATA": "Technical Skills as a Data Engineer",
   "DATA_EXTRACTION_TOOLS": "Data Extraction",
   "DATA_TRANSFORMATION_TOOLS": "Data Transformation",
   "DATA_LOADING_TOOLS": "Data Loading",
@@ -77,7 +78,7 @@
   "BI_TOOLS": "BI Tools",
   "OLAP": "OLAP Cubes",
   "AGILE": "Agile Methodologies",
-  "SKILLS_SD": "Technical Skills as a Software Developer",
+  "SKILLS_DEV": "Technical Skills as a Software Developer",
   "CLEAN_ARCHITECTURE": "Clean Architecture",
   "CLEAN_CODE": "Clean Code",
   "DOM": "DOM y Browser Engine",
