--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,7 +14,8 @@
   "FEATURED_PROJECT_SUMMARY": "Este es un proyecto de comercio electrónico desarrollado en Java utilizando Spring Boot. La aplicación implementa funcionalidades clave para la gestión de productos, pedidos, usuarios y el proceso de compra online.",
   "FEATURED_PROJECT_INFO": "¡Visita la sección para conocer más!",
 
-  "DOWNLOAD_PDF_RESUME": "Descargar Currículum en PDF",
+  "DOWNLOAD_PDF_RESUME_DEV": "Descargar Currículum Desarrollador de Software en PDF",
+  "DOWNLOAD_PDF_RESUME_DATA": "Descargar Currículum Ingeniero de Datos en PDF",
   "WORK": "Experiencia Laboral",
   "IAS_JOB_1": "Desarrollador de Software",
   "IAS_SD_OBJECTIVE_1": "Desarrollo y mantenimiento de aplicaciones backend utilizando Java y Spring Boot.",
@@ -62,7 +63,7 @@
   "UNIVERSITY_NAME": "Universidad Católica del Norte",
   "UNIVERSITY_TITLE_1": "Especialista en Inteligencia de Negocios",
   "UNIVERSITY_TITLE_2": "Ingeniero Informático",
-  "SKILLS_DE": "Habilidades Técnicas como Ingeniero de Datos",
+  "SKILLS_DATA": "Habilidades Técnicas como Ingeniero de Datos",
   "DATA_EXTRACTION_TOOLS": "Extracción de Datos",
   "DATA_TRANSFORMATION_TOOLS": "Transformación de Datos",
   "DATA_LOADING_TOOLS": "Carga de Datos",
@@ -78,7 +79,7 @@
   "BI_TOOLS": "Herramientas de BI",
   "OLAP": "Cubos OLAP",
   "AGILE": "Metodologías Ágiles",
-  "SKILLS_SD": "Habilidades Técnicas como Desarrollador de software",
+  "SKILLS_DEV": "Habilidades Técnicas como Desarrollador de software",
   "CLEAN_ARCHITECTURE": "Arquitecturas Limpias",
   "CLEAN_CODE": "Código Limpio",
   "DOM": "DOM y Motor del Navegador",
