Update routing. Add translate in Name. Update CV Data en. Update index app

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+  "NAME": "Andres Alfonso Mira Mejia",
   "TITLE": "Data Engineer | Business Intelligence Specialist | Software Developer",
 
   "HOME": "Home",
