--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,4 +1,5 @@
 {
+  "NAME": "Andrés Alfonso Mira Mejía",
   "TITLE": "Ingeniero de Datos | Especialista en Inteligencia de Negocios | Desarrollador de Software",
 
   "HOME": "Principal",
